Renamed client management and librarian registration form appropriately

--- a/src/unnamedlibrary/unnamedRegisterMenu.form
+++ b/src/unnamedlibrary/unnamedRegisterMenu.form
@@ -7,6 +7,9 @@
     <Property name="name" type="java.lang.String" value="unnamedBook" noResource="true"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
+  <AccessibilityProperties>
+    <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="Register a librarian - unnamed Library Management System"/>
+  </AccessibilityProperties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
